# 1router

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/api/: Cargo.toml  Dockerfile  README.md  build.rs
apps/api/src/: main.rs
apps/site/: Dockerfile  build.sh  next.config.ts  package.json  tsconfig.json
apps/site/k8s/: 00-namespace.yaml  01-deployment.yaml  02-service.yaml  03-ingress.yaml  deployment.yaml  ingress.yaml  service.yaml
apps/site/src/app/: client-layout.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/site/src/app/about/: page.tsx
apps/site/src/app/api-reference/: page.tsx
apps/site/src/app/chat/: layout.tsx  page.tsx
apps/site/src/app/docs/: page.tsx
apps/site/src/app/models/: layout.tsx  page.tsx
apps/site/src/app/models/[providerSlug]/: opengraph-image.tsx  page.tsx
apps/site/src/app/models/[providerSlug]/[modelSlug]/: model-detail-client.tsx  opengraph-image.tsx  (+1 more)
apps/site/src/app/pitch/: page.tsx
apps/site/src/app/pricing/: page.tsx
apps/site/src/app/privacy/: page.tsx
apps/site/src/app/rankings/: layout.tsx  page.tsx
apps/site/src/app/self-host/: page.tsx
apps/site/src/app/terms/: page.tsx
apps/site/src/components/: Footer.tsx  Nav.tsx  app-showcase.tsx  logo.tsx  mode-toggle.tsx  pitch-contents-list.tsx  trending-models.tsx
apps/site/src/components/ui/: dropdown-menu.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/chat/: page.tsx
src/app/models/: page.tsx
src/app/rankings/: page.tsx
src/components/: Footer.tsx  Nav.tsx  app-showcase.tsx  trending-models.tsx
