[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "1Router backend — OpenAI-compatible AI model routing proxy"
license = "FSL-1.1-Apache-2.0"
publish = false
build = "build.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
